# edit-media

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  tsr.config.json  vite.config.ts
.github/workflows/: build-ubuntu.yml
firebase/: .eslintrc.js  .firebaserc  firebase.json  package-lock.json  package.json  tsconfig.json
firebase/src/: ai.ts  ai.types.ts  index.ts
firebase/src/google/: getGoogleSearch.ts  lib.ts  utils.ts
firebase/src/stores/: chat.ts  user.ts
firebase/src/utils/: firebase.ts  split.ts
patches/: @browserfs__core@0.0.12.patch  @browserfs__fs-dom@0.0.4.patch
public/: ffprobe-wasm.js  ffprobe-wasm.wasm  ffprobe-worker.js
src/: App.tsx  index.css  main.tsx  theme.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  lib.rs  main.rs  utils.rs
src-tauri/src/handlers/: ffmpeg.rs  ffprobe.rs  mod.rs  show_in_folder.rs
src/class/: Media.ts
src/class/types/: Path.ts
src/components/: AudioPlayer.tsx  DownloadButton.tsx  DragAndDrop.tsx  LoadingCircle.tsx  Logo.tsx  TermsOfServiceModal.tsx
src/formatters/: audioChannels.ts  audioVideoContainers.ts  codecs.ts  ffprobeStreams.ts  pix.ts  presets.ts  tunes.ts  videoResolutions.ts
src/helpers/: formatNumber.ts  formatSeconds.ts  isAudio.ts  isImage.ts  isSmallScreen.ts  isVideo.ts  split.ts  superbytes.ts
src/layout/: SidebarContext.tsx  navbar-sidebar.tsx  navbar.tsx  sidebar.tsx  wrapper.tsx
src/pages/: Error.tsx  chat.tsx  download.tsx  index.tsx  kanban.tsx  manual.tsx
src/stores/: auth.ts  config.ts  drop.ts  store.ts
(+73 files in other folders)
